--- a/style.css
+++ b/style.css
@@ -1,8 +1,32 @@
-.navbar {
-  background-color: transparent;
+body {
+    background-color: white;
+    color: #004876;
 }
+
+a {
+    color: #004876 !important
+}
+
+.navbar {
+    background-color: transparent !important;
+}
+
 #logo-picture {
-  max-height: 3rem;
-  max-width: 3rem;
-  padding-right: 1rem;
+    max-height: 3rem;
+    max-width: 3rem;
+    padding-right: 1rem;
+}
+
+.navbar-toggler {
+    background-color: white !important;
+    color: #004876 !important;
+}
+
+.title {
+    color: #004876;
+    font-size: 5ch;
+}
+
+p {
+    color: #7aa5ba;
 }
