working with the logo and header section

--- a/style.css
+++ b/style.css
@@ -1,25 +1,42 @@
-html {
+* {
     box-sizing: border-box;
 }
 
+:root {
+    --main-text-color: #66FCF1;
+}
+
 body {
+    background-color: #0b0c10;
+    color: var(--main-text-color);
     display: flex;
     flex-direction: column;
 }
 
-.card {
-    width: 30%;
-    flex-wrap: wrap;
-    border: 1px red solid;
+.logo-picture {
+    max-height: 300px;
+    margin: 0 auto;
+    /* poor attempt at centering */
+    height: auto !important;
+    /* overrides inline */
+    width: auto !important;
+    /* overrides inline */
+    display: block;
+    max-width: 50%;
 }
 
-.header {
-    height: 30%;
-    background: red;
-    color: white;
-    text-align: center;
+.header-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 2em 0;
 }
 
-.container {
-    padding: 2px 16px;
+.picture {
+    width: 100%;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-between;
 }
