--- a/style.css
+++ b/style.css
@@ -1,83 +1,137 @@
-* {
-    box-sizing: border-box;
-}
-
-@font-face {
-    font-family: Nanum_Gothic;
-    src: url('assets/fonts/NanumGothic-Regular.ttf');
-}
-
-:root {
-    --main-text-color: #66FCF1;
-}
-
-body {
-    background: url('./assets/backgroundimg.jpg')no-repeat center center fixed;
-    background-size: cover;
-    color: var(--main-text-color);
-    display: flex;
-    flex-direction: column;
-    font-family: Nanum_Gothic, sans-serif;
-}
-
-.logo-picture {
-    max-height: 10em;
-    margin: 0 auto;
-    /* poor attempt at centering */
-    height: auto !important;
-    /* overrides inline */
-    width: auto !important;
-    /* overrides inline */
-    display: block;
-    max-width: 50%;
-}
-
-.header-links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 2em 0;
-}
-
-.header-links a {
-    color: inherit;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.header-links a:hover {
-    cursor: pointer;
-    background-color: #1f2833;
-    color: #c5c6c7;
-}
-
-a:active {
-    background-color: black;
-}
-
-a:visited {
-    background-color: #ccc;
-}
-
-.about-me {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.about-me h1 {
-    font-size: 3em;
-    font-weight: 900;
-}
-
-.cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.card {
-    flex: 0 1 50%;
-}
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    
+    @font-face {
+        font-family: Nanum_Gothic;
+        src: url('assets/fonts/NanumGothic-Regular.ttf');
+    }
+    
+     :root {
+        --main-text-color: #45a29e;
+    }
+    
+    .container {
+        width: 100%;
+        margin: 50px auto;
+    }
+    
+    body {
+        background: url('./assets/backgroundimg.jpg')no-repeat center center fixed;
+        background-size: cover;
+        color: var(--main-text-color);
+        display: flex;
+        flex-direction: column;
+        font-family: Nanum_Gothic, sans-serif;
+    }
+    
+    h1 {
+        text-align: center;
+        font-weight: 900;
+        font-size: 3em;
+    }
+    
+    .logo-picture {
+        max-height: 10em;
+        margin: 0 auto;
+        /* poor attempt at centering */
+        height: auto !important;
+        /* overrides inline */
+        width: auto !important;
+        /* overrides inline */
+        display: block;
+        max-width: 50%;
+    }
+    
+    .header-links {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 2em 0;
+    }
+    
+    .header-links a {
+        color: inherit;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+    
+    .header-links a:hover {
+        cursor: pointer;
+        background-color: #1f2833;
+        color: #66fcf1;
+        transform: scale(1.15);
+    }
+    
+    a:active {
+        background-color: black;
+    }
+    
+    a:visited {
+        background-color: #ccc;
+    }
+    
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0 4em;
+    }
+    
+    .row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-flow: wrap;
+    }
+    
+    .card {
+        width: 80%;
+        background: linear-gradient(to right, #45a293, #1f2833);
+        border: 1px solid #c5c6c7;
+        color: #c5c6c7;
+        margin-bottom: 50px;
+        transition: 0.3s;
+    }
+    
+    .card-img {
+        height: auto;
+        width: auto;
+        max-width: 300px;
+        max-height: 300px;
+    }
+    
+    .card-body {
+        padding: 30px 20px;
+        text-align: center;
+        font-size: 18px;
+    }
+    
+    .card-body .btn {
+        display: block;
+        color: #fff;
+        text-align: center;
+        margin-top: 30px;
+        text-decoration: none;
+        padding: 10px 5px;
+    }
+    
+    .card:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+    }
+    
+    @media screen and (min-width: 1500px) {
+        .card {
+            width: 20%;
+        }
+    }
+    
+    @media screen and (min-width: 1000px) {
+        .card {
+            width: 40%;
+        }
+    }
