--- a/style.css
+++ b/style.css
@@ -1,152 +1,158 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 @font-face {
-  font-family: Nanum_Gothic;
-  src: url('assets/fonts/NanumGothic-Regular.ttf');
+    font-family: Nanum_Gothic;
+    src: url('assets/fonts/NanumGothic-Regular.ttf');
 }
 
 :root {
-  --main-text-color: #45a29e;
+    --main-text-color: #45a29e;
 }
 
 .container {
-  width: 100%;
-  margin: 50px auto;
+    width: 100%;
+    margin: 50px auto;
 }
 
 body {
-  background: url('./assets/backgroundimg.jpg') no-repeat center center fixed;
-  background-size: cover;
-  color: var(--main-text-color);
-  display: flex;
-  flex-direction: column;
-  font-family: Nanum_Gothic, sans-serif;
+    background: url('./assets/backgroundimg.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: var(--main-text-color);
+    display: flex;
+    flex-direction: column;
+    font-family: Nanum_Gothic, sans-serif;
 }
 
 h1 {
-  text-align: center;
-  font-weight: 900;
-  font-size: 3em;
-  margin: 1em 0;
+    text-align: center;
+    font-weight: 900;
+    font-size: 3em;
+    margin: 1em 0;
+}
+
+p {
+    font-weight: 900;
+    letter-spacing: .05em;
 }
 
 .logo-picture {
-  max-height: 10em;
-  margin: 0 auto;
-  /* poor attempt at centering */
-  height: auto !important;
-  /* overrides inline */
-  width: auto !important;
-  /* overrides inline */
-  display: block;
-  max-width: 50%;
+    max-height: 10em;
+    margin: 0 auto;
+    /* poor attempt at centering */
+    height: auto !important;
+    /* overrides inline */
+    width: auto !important;
+    /* overrides inline */
+    display: block;
+    max-width: 50%;
 }
 
 .header-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 2em 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 2em 0;
+    font-weight: 600;
 }
 
 .header-links a {
-  color: inherit;
-  text-decoration: none;
-  text-transform: uppercase;
+    color: inherit;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 .header-links a:hover {
-  cursor: pointer;
-  background-color: #1f2833;
-  color: #66fcf1;
-  transform: scale(1.15);
+    cursor: pointer;
+    background-color: #1f2833;
+    color: #66fcf1;
+    transform: scale(1.15);
 }
 
 a:active {
-  background-color: black;
+    background-color: black;
 }
 
 a:visited {
-  background-color: #ccc;
+    background-color: #ccc;
 }
 
 .about-me {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0 4em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 4em;
 }
 
 .row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-flow: wrap;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
 }
 
 .card {
-  width: 80%;
-  background: linear-gradient(to right, #45a293, #1f2833);
-  border: 1px solid #c5c6c7;
-  color: #c5c6c7;
-  margin-bottom: 50px;
-  transition: 0.3s;
+    width: 80%;
+    background: linear-gradient(to right, #45a293, #1f2833);
+    border: 1px solid #c5c6c7;
+    color: #c5c6c7;
+    margin-bottom: 50px;
+    transition: 0.3s;
 }
 
 .card-img {
-  height: auto;
-  width: auto;
-  max-width: 300px;
-  max-height: 300px;
+    height: auto;
+    width: auto;
+    max-width: 300px;
+    max-height: 300px;
 }
 
 .card-body {
-  padding: 30px 20px;
-  text-align: center;
-  font-size: 18px;
+    padding: 30px 20px;
+    text-align: center;
+    font-size: 18px;
 }
 
 .card-body .btn {
-  display: block;
-  color: #fff;
-  text-align: center;
-  margin-top: 30px;
-  text-decoration: none;
-  padding: 10px 5px;
+    display: block;
+    color: #fff;
+    text-align: center;
+    margin-top: 30px;
+    text-decoration: none;
+    padding: 10px 5px;
 }
 
 .card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+    transform: scale(1.05);
+    box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
 }
 
 .contact {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 @media screen and (min-width: 1500px) {
-  .card {
-    width: 20%;
-  }
+    .card {
+        width: 20%;
+    }
 }
 
 @media screen and (min-width: 1000px) {
-  .card {
-    width: 40%;
-  }
-  .container {
-    width: 85%;
-  }
-  .header-links {
-    font-size: 1.3em;
-  }
-  .about-me p {
-    font-size: 1.3em;
-  }
+    .card {
+        width: 40%;
+    }
+    .container {
+        width: 85%;
+    }
+    .header-links {
+        font-size: 1.3em;
+    }
+    .about-me p {
+        font-size: 1.3em;
+    }
 }
