--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 .container {
-    width: 100%;
+    max-width: 1200px;
     margin: 50px auto;
 }
 
@@ -28,9 +28,10 @@ body {
 }
 
 h1 {
+    font-family: serif;
     text-align: center;
     font-weight: 900;
-    font-size: 3em;
+    font-size: 3rem;
     margin: 1em 0;
 }
 
@@ -40,7 +41,7 @@ p {
 }
 
 .logo-picture {
-    max-height: 10em;
+    max-height: 15em;
     margin: 0 auto;
     /* poor attempt at centering */
     height: auto !important;
@@ -63,6 +64,7 @@ p {
     color: inherit;
     text-decoration: none;
     text-transform: uppercase;
+    transition: all .35s;
 }
 
 .header-links a:hover {
@@ -104,26 +106,39 @@ a:visited {
     transition: 0.3s;
 }
 
-.card-img {
-    height: auto;
-    width: auto;
-    max-width: 300px;
-    max-height: 300px;
+.card-header h2 {
+    /* font-family: serif; */
+    text-transform: uppercase;
+    font-weight: 900;
+    text-align: center;
+    padding-top: 1em;
+    text-decoration: underline;
 }
 
 .card-body {
     padding: 30px 20px;
     text-align: center;
     font-size: 18px;
+    border: none;
 }
 
-.card-body .btn {
+.btn {
     display: block;
-    color: #fff;
     text-align: center;
     margin-top: 30px;
     text-decoration: none;
     padding: 10px 5px;
+    background-color: #c5c6c7;
+    color: #0b0c10;
+    display: inline-block;
+    background: linear-gradient(to right, #45a29e 0%, #45a29e 50%, #ffffff 50%, #ffffff 100%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    transition: background-position 0.5s;
+}
+
+.btn:hover {
+    background-position: 0 0;
 }
 
 .card:hover {
