--- a/style.css
+++ b/style.css
@@ -149,6 +149,23 @@ a:visited {
 .contact {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.contact a {
+    color: inherit;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 1em;
+    transition: all .35s;
+}
+
+.contact a:hover {
+    cursor: pointer;
+    background-color: #1f2833;
+    color: #66fcf1;
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1500px) {
